Fix overflow problem for content pages on mobile

--- a/docs/app/global.css
+++ b/docs/app/global.css
@@ -45,13 +45,8 @@
 #nd-docs-layout:not(:has(#nd-sidebar)) {
   --fd-sidebar-width: 0px !important;
   --fd-toc-width: 0px !important;
-  grid-template-columns: 1fr !important;
-  grid-template-areas: "main" !important;
 }
 
-#nd-docs-layout:not(:has(#nd-sidebar)) > * {
-  grid-area: main !important;
-}
 
 #nd-sidebar {
   background-color: transparent !important;
